# Storyteller

./: .gitignore  .gitmodules  CMakeLists.txt  todo.txt
Editor/: CMakeLists.txt
Editor/cmake/: copy_translations.cmake
Editor/locale/en_EN/LC_MESSAGES/: StorytellerEditor.po
Editor/locale/ru_RU/LC_MESSAGES/: Storyteller.po  StorytellerEditor.mo  StorytellerEditor.po
Editor/scripts/: po_compile.sh  po_compile_en.sh  po_compile_ru.sh  po_update.sh  po_update_en.sh  po_update_ru.sh
Editor/src/: dialogs.cpp  dialogs.h  editor_application.cpp  editor_application.h  editor_ui.cpp  editor_ui.h  editor_ui_compositor.cpp  editor_ui_compositor.h  editor_ui_impl.cpp  editor_ui_impl.h  editor_ui_impl_opengl_glfw.cpp  editor_ui_impl_opengl_glfw.h  file_dialogs.cpp  file_dialogs.h  glfw_helpers.cpp  glfw_helpers.h  imgui_helpers.cpp  imgui_helpers.h  main.cpp  ui_utils.cpp  ui_utils.h  window.cpp  window.h
Engine/: CMakeLists.txt
Engine/include/: application.h  console_manager.h  game_controller.h  game_document.h  game_document_manager.h  game_document_serializer.h  game_document_sort_filter_proxy_view.h  localization_manager.h  log.h  pointers.h  settings.h  storyteller.h  uuid.h  window.h  window_glfw.h
Engine/include/Storyteller/: application.h  config.h  console_utils.h  dialogs.h  entities.h  entry_point.h  event.h  filesystem.h  filesystem_utils.h  function_utils.h  game_document.h  game_document_manager.h  game_document_serializer.h  game_document_sort_filter_proxy_view.h  i18n_base.h  i18n_library.h  i18n_lookup_dictionary.h  i18n_manager.h  i18n_translator.h  image.h  json_reader.h  json_writer.h  key_codes.h  key_event.h  localization_base.h  localization_dictionary.h  localization_library.h  localization_lookup_dictionary.h  localization_manager.h  localization_translator.h  log.h  macro.h  mouse_codes.h  mouse_event.h  platform.h  pointers.h  program_options.h  settings.h  storyteller.h  string_utils.h  (+7 more)
Engine/include/Storyteller/internal/: settings_json_impl.h  settings_json_impl_reader.h  settings_json_impl_writer.h
Engine/include/internal/: settings_json_impl.h  settings_json_impl_reader.h  settings_json_impl_writer.h
Engine/locale/en_EN/LC_MESSAGES/: Storyteller.po
Engine/locale/ru_RU/LC_MESSAGES/: Storyteller.po
Engine/scripts/: po_compile_en.sh  po_compile_ru.sh  po_update_en.sh  po_update_ru.sh
Engine/src/: application.cpp  application.h  config.cpp  console_manager.cpp  console_manager.h  console_printer.cpp  console_utils.cpp  dialogs.cpp  entities.cpp  entities.h  entry_point.h  filesystem.cpp  filesystem_utils.cpp  filesystem_utils.h  game_controller.cpp  game_controller.h  game_document.cpp  game_document.h  game_document_manager.cpp  game_document_serializer.cpp  game_document_sort_filter_proxy_view.cpp  game_document_sort_filter_proxy_view.h  i18n_library.cpp  i18n_lookup_dictionary.cpp  i18n_manager.cpp  i18n_translator.cpp  image.cpp  json_reader.cpp  json_writer.cpp  localization_dictionary.cpp  localization_library.cpp  localization_lookup_dictionary.cpp  localization_manager.cpp  localization_manager.h  localization_translator.cpp  log.cpp  program_options.cpp  settings.cpp  settings_json_impl.cpp  settings_json_impl_reader.cpp  (+10 more)
Runtime/: CMakeLists.txt
Runtime/locale/en_EN/LC_MESSAGES/: StorytellerRuntime.po
Runtime/locale/ru_RU/LC_MESSAGES/: StorytellerRuntime.po
Runtime/scripts/: po_compile_en.sh  po_compile_ru.sh  po_update.sh  po_update_en.sh  po_update_ru.sh
Runtime/src/: console_manager.cpp  console_manager.h  game_controller.cpp  game_controller.h  runtime_application.cpp  runtime_application.h
Runtime/src/win/: StorytellerRuntime.rc_in
cmake/: StorytellerI18N.cmake  copy_translations.cmake  copy_translations_to_editor.cmake
common/: StorytellerConfigTemplate.json  StorytellerRuntimeSettingsTemplate.json
