cmake_minimum_required(VERSION 3.16)

project(Storyteller)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CONFIGURATION_TYPES)
	if("MinSizeRel" IN_LIST CMAKE_CONFIGURATION_TYPES)
		list(REMOVE_ITEM CMAKE_CONFIGURATION_TYPES MinSizeRel)
	endif()
else()
	set(allowableBuildTypes Debug Release RelWithDebInfo)
	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "${allowableBuildTypes}")
	if(NOT CMAKE_BUILD_TYPE)
		set(CMAKE_BUILD_TYPE Debug CACHE STRING "" FORCE)
	elseif(NOT CMAKE_BUILD_TYPE IN_LIST allowableBuildTypes)
		message(FATAL_ERROR "Invalid build type: ${CMAKE_BUILD_TYPE}")
	endif()
endif()

include(vendor/Vendor.cmake)
add_subdirectory(Engine)
add_subdirectory(Editor)
add_subdirectory(Runtime)
